--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css"/>
-    <link rel="stylesheet" href="./styles/global.css"/>
-    <link rel="stylesheet" href="./styles/style.css"/>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header class="header">
@@ -17,15 +17,19 @@
             <a class="header__link header__link_active" href="#0">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#lots">посмотреть лоты</a>
+            <a href="#" class="header__link" href="#lots">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#about">об аукционе</a>
+            <a href="#" class="header__link" href="#about">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <a class="header__logo">
-        <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип проекта" />
+      <a href="#" class="header__logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
+        />
       </a>
       <address class="header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -36,10 +40,17 @@
     <main>
       <section class="cover">
         <div class="overlay"></div>
-        <h1 class="cover__title">о<span class="letter-spacing-extended">но</span>
-          <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
-          <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span
-              class="no-letter-spacing">о</span></span>
+        <h1 class="cover__title">
+          о<span class="letter-spacing-extended">но</span>
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">бе</span></span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            ></span
+          >
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -71,7 +82,8 @@
               <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
-                  Книга, где описан один скучный день из жизни рекламного агента</h3>
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -84,7 +96,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href="#0">
+            <a href="#" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -100,11 +112,15 @@
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" href="#">посмотреть больше</a>
+        <a href="#" class="lots__look-more-link">посмотреть больше</a>
       </section>
       <section class="about" id="about">
         <div class="about__logo">
-          <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип проекта">
+          <img
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="Логотип проекта"
+          />
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
@@ -135,30 +151,44 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active" href="#0">главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#0"
+              >главная</a
+            >
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
+            <a href="#lots" class="footer__menu-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#about">об аукционе</a>
+            <a href="#about" class="footer__menu-link">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/yt.svg" alt="Ссылка на YouTube" />
+          <a href="#0" class="footer__social-link">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="Ссылка на YouTube"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="Ссылка на VK" />
+          <a href="#0" class="footer__social-link">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Ссылка на VK"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Ссылка на Pinterest" />
+          <a href="#0" class="footer__social-link">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="Ссылка на Pinterest"
+            />
           </a>
         </li>
       </ul>
